# partitioned_elias_fano

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  all_ones_sequence.hpp  binary_collection.hpp  binary_freq_collection.hpp  bitvector_collection.hpp  block_codecs.cpp  block_codecs.hpp  block_freq_index.hpp  block_posting_list.hpp  bm25.hpp  compact_elias_fano.hpp  compact_ranked_bitvector.hpp  configuration.hpp  create_freq_index.cpp  create_wand_data.cpp  freq_index.hpp  global_parameters.hpp  index_types.hpp  indexed_sequence.hpp  integer_codes.hpp  optimal_partition.hpp  partitioned_sequence.hpp  positive_sequence.hpp  queries.cpp  queries.hpp  semiasync_queue.hpp  sequence_collection.hpp  strict_elias_fano.hpp  strict_sequence.hpp  uniform_partitioned_sequence.hpp  util.hpp  wand_data.hpp
test/: CMakeLists.txt  test_block_codecs.cpp  test_block_freq_index.cpp  test_block_posting_list.cpp  test_compact_elias_fano.cpp  test_compact_ranked_bitvector.cpp  test_freq_index.cpp  test_generic_sequence.hpp  test_indexed_sequence.cpp  test_partitioned_sequence.cpp  test_positive_sequence.cpp  test_ranked_queries.cpp  test_sequence_collection.cpp  test_strict_elias_fano.cpp  test_uniform_partitioned_sequence.cpp
